--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,8 @@
     <string name="not_registered_sign_up_here">Not Registered? Sign Up Here</string>
     <string name="choose_file">Choose File</string>
     <string name="upload">Upload</string>
+    <string name="re_enter_password">Re-enter Password</string>
+    <string name="upload_progresss">Upload Progress:</string>
+    <string name="file_name_no_file_chosen">File Name: No file chosen</string>
+    <string name="play">Play</string>
 </resources>
